<resources>
    <string name="app_name">Prova</string>
    <string name="new_denuncia">New Report</string>
    <string name="list_denuncia">List Reports</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="descricao">Description</string>
    <string name="data">Date</string>
    <string name="tipo">Type</string>
    <string name="report_created">Report created.</string>
    <string name="all_fields_must_be_filled">All fields must be filled.</string>
    <string name="remove">Remove Report</string>
    <string name="are_you_sure_remove">Are you sure you want to remove the selected report(s)?</string>
    <string name="dummy_data">This will create new fake reports for demonstration, are you sure?</string>
    <string name="there_is_no_image">There is no image to be seen.</string>
    <string name="yes">Yes</string>
    <string name="ampliar">Click to see the full image.</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="statitics">Statistics</string>
    <string name="first_name">Name</string>
    <string name="signup">Your account is valid until the app closes.</string>
    <string name="local">Building</string>
    <string name="pick_date">Pick Date</string>
    <string name="click_to_select">Click to select an image.</string>
    <string name="option_1">Depredation</string>
    <string name="option_2">Malfunction</string>
    <string name="option_3">Illegal/Inappropriate Use</string>
    <string name="welcome">Welcome!</string>
    <string name="no_data">There\'s no data to be analyzed.</string>
    <string name="most_depred">The building with the biggest number of depredation is:</string>
    <string name="amount">with an amount of:</string>
    <string name="ocurrency">ocurrencies.</string>
    <string name="most_bad_use">The building with most amount of illegal or innapropriate activity is:</string>
    <string name="most_nature">The most common type is:</string>
    <string name="most_trouble">The most problematic building is:</string>
    <string name="month_trouble">The month with the most amount of depredation reports is:</string>
    <string name="pick_hour">Pick Hour</string>
    <string name="hour">Hour</string>
</resources>
